--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,22 @@
     package="com.example.har">
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".signup"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".forgetPassword2"></activity>
+        <activity android:name=".signup" />
         <activity android:name=".forgetPassword" />
-        <activity
-            android:name=".ui.login.LoginActivity">
-        </activity>
-        <activity android:name=".Home">
-        </activity>
+        <activity android:name=".ui.login.LoginActivity"></activity>
+        <activity android:name=".Home"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
